DuPont DevSB/src/objects/Corporate_Metadata_Components__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Package__c</fullName>
        <label>Corporate Package</label>
        <referenceTo>Corporate_Package__c</referenceTo>
        <relationshipLabel>Metadata Components</relationshipLabel>
        <relationshipName>Corporate_Metadata_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Metdata_Mapping_One_Dupont__c</fullName>
        <label>MetaData Mapping (One DuPont)</label>
        <referenceTo>OneDuPontMetaData__c</referenceTo>
        <relationshipLabel>Corporate Package Associations</relationshipLabel>
        <relationshipName>Corporate_Metadata_Components</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Targeted_AgCo__c</fullName>
        <label>Targeted AgCo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_EC__c</fullName>
        <label>Targeted EC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_FMC__c</fullName>
        <label>Targeted FMC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_IB__c</fullName>
        <label>Targeted IB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_MS__c</fullName>
        <label>Targeted MS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_NH__c</fullName>
        <label>Targeted NH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_PS__c</fullName>
        <label>Targeted PS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_SS__c</fullName>
        <label>Targeted SS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Corporate Metadata Components</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Corp Component #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Metadata Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>